<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fm"
            type="com.example.baeminclone.ui.maim.DeliveryFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.example.baeminclone.ui.custom.CustomAdvertisementView
                    android:id="@+id/viewAdvertisement"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:background="@color/main_color"
                    app:AdvertisementRadius="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="264dp"
                    android:src="@drawable/img_delivery_list"
                    android:scaleType="fitXY"
                    app:layout_constraintTop_toBottomOf="@id/viewAdvertisement"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <!-- 1행 -->
                <!-- 1인분 -->
                <LinearLayout
                    android:id="@+id/layoutOnePerson"
                    android:layout_width="66dp"
                    android:layout_height="61dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    android:onClick="@{fm::onClick}"
                    android:tag="@string/one_person"
                    app:layout_constraintEnd_toStartOf="@id/layoutKoreanFood"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/viewAdvertisement"/>
                <!-- 한식 -->
                <LinearLayout
                    android:id="@+id/layoutKoreanFood"
                    android:layout_width="66dp"
                    android:layout_height="61dp"
                    android:orientation="vertical"
                    android:tag="@string/korean_food"
                    android:onClick="@{fm::onClick}"
                    app:layout_constraintEnd_toStartOf="@id/layoutSnackBar"
                    app:layout_constraintStart_toEndOf="@id/layoutOnePerson"
                    app:layout_constraintTop_toTopOf="@id/layoutOnePerson"/>
                <!-- 분식 -->
                <LinearLayout
                    android:id="@+id/layoutSnackBar"
                    android:layout_width="66dp"
                    android:layout_height="61dp"
                    android:orientation="vertical"
                    android:tag="@string/snack_bar"
                    android:onClick="@{fm::onClick}"
                    app:layout_constraintEnd_toStartOf="@id/layoutCaffeDessert"
                    app:layout_constraintStart_toEndOf="@id/layoutKoreanFood"
                    app:layout_constraintTop_toTopOf="@id/layoutOnePerson"/>
                <!-- 카페 디저트 -->
                <LinearLayout
                    android:id="@+id/layoutCaffeDessert"
                    android:layout_width="66dp"
                    android:layout_height="61dp"
                    android:orientation="vertical"
                    android:tag="@string/caffe_dessert"
                    android:onClick="@{fm::onClick}"
                    app:layout_constraintEnd_toStartOf="@id/layoutJapaneseFood"
                    app:layout_constraintStart_toEndOf="@id/layoutSnackBar"
                    app:layout_constraintTop_toTopOf="@id/layoutOnePerson"/>
                <!-- 돈까스 회 일식 -->
                <LinearLayout
                    android:id="@+id/layoutJapaneseFood"
                    android:layout_width="66dp"
                    android:layout_height="61dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical"
                    android:tag="@string/japanese_food"
                    android:onClick="@{fm::onClick}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/layoutCaffeDessert"
                    app:layout_constraintTop_toTopOf="@id/layoutOnePerson"/>

                <!-- 2행 -->
                <!-- 치킨 -->
                <LinearLayout
                    android:id="@+id/layoutChicken"
                    android:layout_width="66dp"
                    android:layout_height="61dp"
                    android:layout_marginStart="20dp"
                    android:orientation="vertical"
                    android:tag="@string/chicken"
                    android:onClick="@{fm::onClick}"
                    app:layout_constraintEnd_toStartOf="@id/layoutPizza"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutOnePerson"/>
                <!-- 피자 -->
                <LinearLayout
                    android:id="@+id/layoutPizza"
                    android:layout_width="66dp"
                    android:layout_height="61dp"
                    android:orientation="vertical"
                    android:tag="@string/pizza"
                    android:onClick="@{fm::onClick}"
                    app:layout_constraintEnd_toStartOf="@id/layoutWesternFood"
                    app:layout_constraintStart_toEndOf="@id/layoutChicken"
                    app:layout_constraintTop_toTopOf="@id/layoutChicken"/>
                <!-- 아시안 양식 -->
                <LinearLayout
                    android:id="@+id/layoutWesternFood"
                    android:layout_width="66dp"
                    android:layout_height="61dp"
                    android:orientation="vertical"
                    android:tag="@string/western_food"
                    android:onClick="@{fm::onClick}"
                    app:layout_constraintEnd_toStartOf="@id/layoutChineseFood"
                    app:layout_constraintStart_toEndOf="@id/layoutPizza"
                    app:layout_constraintTop_toTopOf="@id/layoutChicken"/>
                <!-- 중국집 -->
                <LinearLayout
                    android:id="@+id/layoutChineseFood"
                    android:layout_width="66dp"
                    android:layout_height="61dp"
                    android:orientation="vertical"
                    android:tag="@string/chinese_food"
                    android:onClick="@{fm::onClick}"
                    app:layout_constraintEnd_toStartOf="@id/layoutPorkFeet"
                    app:layout_constraintStart_toEndOf="@id/layoutWesternFood"
                    app:layout_constraintTop_toTopOf="@id/layoutChicken"/>
                <!-- 족발 보쌈 -->
                <LinearLayout
                    android:id="@+id/layoutPorkFeet"
                    android:layout_width="66dp"
                    android:layout_height="61dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical"
                    android:tag="@string/pork_feet"
                    android:onClick="@{fm::onClick}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/layoutChineseFood"
                    app:layout_constraintTop_toTopOf="@id/layoutChicken"/>

                <!-- 3행 -->
                <!-- 야식 -->
                <LinearLayout
                    android:id="@+id/layoutMidnightSnack"
                    android:layout_width="66dp"
                    android:layout_height="61dp"
                    android:layout_marginStart="20dp"
                    android:orientation="vertical"
                    android:tag="@string/midnight_snack"
                    android:onClick="@{fm::onClick}"
                    app:layout_constraintEnd_toStartOf="@id/layoutSteamed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutChicken"/>
                <!-- 찜탕 -->
                <LinearLayout
                    android:id="@+id/layoutSteamed"
                    android:layout_width="66dp"
                    android:layout_height="61dp"
                    android:orientation="vertical"
                    android:tag="@string/steamed"
                    android:onClick="@{fm::onClick}"
                    app:layout_constraintEnd_toStartOf="@id/layoutLunch"
                    app:layout_constraintStart_toEndOf="@id/layoutMidnightSnack"
                    app:layout_constraintTop_toTopOf="@id/layoutMidnightSnack"/>
                <!-- 도시락 -->
                <LinearLayout
                    android:id="@+id/layoutLunch"
                    android:layout_width="66dp"
                    android:layout_height="61dp"
                    android:orientation="vertical"
                    android:tag="@string/lunch"
                    android:onClick="@{fm::onClick}"
                    app:layout_constraintEnd_toStartOf="@id/layoutFastFood"
                    app:layout_constraintStart_toEndOf="@id/layoutSteamed"
                    app:layout_constraintTop_toTopOf="@id/layoutMidnightSnack"/>
                <!-- 패스트푸드 -->
                <LinearLayout
                    android:id="@+id/layoutFastFood"
                    android:layout_width="66dp"
                    android:layout_height="61dp"
                    android:orientation="vertical"
                    android:tag="@string/fast_food"
                    android:onClick="@{fm::onClick}"
                    app:layout_constraintEnd_toStartOf="@id/layoutBrand"
                    app:layout_constraintStart_toEndOf="@id/layoutLunch"
                    app:layout_constraintTop_toTopOf="@id/layoutMidnightSnack"/>
                <!-- 브랜드관 -->
                <LinearLayout
                    android:id="@+id/layoutBrand"
                    android:layout_width="66dp"
                    android:layout_height="61dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical"
                    android:tag="@string/brand"
                    android:onClick="@{fm::onClick}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/layoutFastFood"
                    app:layout_constraintTop_toTopOf="@id/layoutMidnightSnack"/>


                <!-- 4행 -->
                <!-- 맛집랭킹 -->
                <LinearLayout
                    android:id="@+id/layoutRanking"
                    android:layout_width="66dp"
                    android:layout_height="61dp"
                    android:layout_marginStart="20dp"
                    android:orientation="vertical"
                    android:tag="@string/ranking"
                    android:onClick="@{fm::onClick}"
                    app:layout_constraintEnd_toStartOf="@id/layoutSteamed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutMidnightSnack"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/gray_d7"
                    app:layout_constraintBottom_toTopOf="@id/horizontalContour"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <View
                    android:id="@+id/horizontalContour"
                    android:layout_width="0dp"
                    android:layout_height="6dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/gray_card"
                    app:layout_constraintTop_toBottomOf="@id/layoutRanking"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>


                <TextView
                    android:id="@+id/txtNeighborhoodDelivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/neighborhood_delivery"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/horizontalContour"
                    app:layout_constraintStart_toStartOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvNeighborhoodDelivery"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/txtNeighborhoodDelivery"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>