<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menu.MenuActivity">

    <View
        android:id="@+id/btnBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/ic_arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_services"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/btnBack"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:minHeight="170dp"/>


    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray_card_stroke"
        app:layout_constraintBottom_toTopOf="@id/horizontalContour1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/horizontalContour1"
        android:layout_width="0dp"
        android:layout_height="6dp"
        android:background="@color/gray_card"
        app:layout_constraintTop_toBottomOf="@id/viewPager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- 쇼핑 라이브 -->
    <LinearLayout
        android:id="@+id/layoutShoppingLive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        app:layout_constraintTop_toBottomOf="@id/horizontalContour1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bm_shopping_live"
            android:textSize="22sp"
            android:includeFontPadding="false"
            android:lineSpacingExtra="0dp"
            android:layout_gravity="center_vertical"/>

        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:gravity="center_vertical"
            android:background="@drawable/ic_arrow_forward"/>

    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray_card_stroke"
        app:layout_constraintTop_toBottomOf="@id/layoutShoppingLive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txtNowSpecialPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:text="@string/now_special_price"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/layoutShoppingLive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txtLiveCalendar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        android:text="@string/live_calendar"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/txtNowSpecialPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray_card_stroke"
        app:layout_constraintBottom_toTopOf="@id/horizontalContour2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/horizontalContour2"
        android:layout_width="0dp"
        android:layout_height="6dp"
        android:background="@color/gray_card"
        app:layout_constraintTop_toBottomOf="@id/txtLiveCalendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- 배민 선물하기 -->
    <LinearLayout
        android:id="@+id/layoutGiveGift"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        app:layout_constraintTop_toBottomOf="@id/horizontalContour2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bm_shopping_live"
            android:textSize="22sp"
            android:includeFontPadding="false"
            android:lineSpacingExtra="0dp"
            android:layout_gravity="center_vertical"/>

        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:gravity="center_vertical"
            android:background="@drawable/ic_arrow_forward"/>

    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray_card_stroke"
        app:layout_constraintBottom_toTopOf="@id/horizontalContour3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/horizontalContour3"
        android:layout_width="0dp"
        android:layout_height="6dp"
        android:background="@color/gray_card"
        app:layout_constraintTop_toBottomOf="@id/layoutGiveGift"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- 배민 전국별미 -->
    <LinearLayout
        android:id="@+id/layoutNationalDelicacy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        app:layout_constraintTop_toBottomOf="@id/horizontalContour3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bm_national_delicacy"
            android:textSize="22sp"
            android:includeFontPadding="false"
            android:lineSpacingExtra="0dp"
            android:layout_gravity="center_vertical"/>

        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:gravity="center_vertical"
            android:background="@drawable/ic_arrow_forward"/>

    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray_card_stroke"
        app:layout_constraintTop_toBottomOf="@id/layoutNationalDelicacy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txtRegionalDelicacies"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="16dp"
        android:text="@string/regional_delicacies"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/layoutNationalDelicacy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray_card_stroke"
        app:layout_constraintTop_toBottomOf="@id/txtRegionalDelicacies"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:background="@color/gray_card"
        app:layout_constraintTop_toBottomOf="@id/txtRegionalDelicacies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>